# laptop-support-cli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
src/: command.rs  keyboard.rs  main.rs  mouse.rs  tabletmode.rs
