[package]
name = "laptop-support-cli"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "laptopcli"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
laptop-support = { git = "https://github.com/petitstrawberry/laptop-support-rs.git", rev = "be9eaa695fded3ac97494ef20cf71475c0bf714d" }
